# MyFarmNode

./: CMakeLists.txt  README.md  package-lock.json  package.json  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Device.cpp  Device.hpp  MQTT.cpp  MQTT.hpp  NSV.cpp  NSV.hpp  SHT3XSensor.cpp  SHT3XSensor.hpp  esp8266_wrapper.h  main.cpp  systeminfo.cpp  systeminfo.h  ta6586.c  ta6586.h  wifi.cpp  wifi.h
